--- a/references.bib
+++ b/references.bib
@@ -1,16 +1,4 @@
-@inproceedings{ferreira_patterns_2008,
-	address = {Nashville, Tennessee, {USA}},
-	title = {Patterns for Data and Metadata Evolution in Adaptive Object-Models},
-	isbn = {978-1-60558-151-4},
-	doi = {10.1145/1753196.1753203},
-	booktitle = {Proceedings of the 15th Conference on Pattern Languages of Programs},
-	publisher = {{ACM}},
-	author = {Ferreira, Hugo S. and Correia, Filipe F. and Welicki, Leon},
-	month = oct,
-	year = {2008},
-},
-
-@article{Bayer1992,
+@article{Bayer1993,
 abstract = {To establish that a document was created after a given moment in time, it is necessary to report events that could not have been predicted before they happened. To establish that a document was created before a given moment in time, it is necessary to cause an event based on the document, which can be observed by others. Cryptographic hash functions can be used both to report events succinctly, and to cause events based on documents without revealing their contents. Haber and Stornetta have proposed two schemes for digital time-stamping which rely on these principles [HaSt 91]. We reexamine one of those protocols, addressing the resource constraint required for storage and verification of time-stamp certificates. By using trees, we show how to achieve an exponential increase in the publicity obtained for each time-stamping event, while reducing the storage and the computation required in order to validate a given certificate. We show how time-stamping can be used in certain circumstances to extend the useful lifetime of different kinds of cryptographic certifications of authenticity, in the event that the certifying protocol is compromised. This can be applied to digital signatures, or to time-stamping itself, making the digital time-stamping process renewable.},
 author = {Bayer, Dave and Haber, Stuart and Stornetta, W. Scott},
 doi = {10.1007/978-1-4613-9323-8_24},
@@ -22,6 +10,7 @@ title = {{Improving the Efficiency and Reliability of Digital Time-Stamping}},
 url = {http://link.springer.com/10.1007/978-1-4613-9323-8{\_}24},
 year = {1992}
 }
+
 
 @article{Nakamoto2008,
 abstract = {Abstract. A purely peer-to-peer version of electronic cash would allow online payments to be sent directly from one party to another without going through a financial institution. Digital signatures provide part of the solution, but the main benefits are lost if a trusted third party is still required to prevent double-spending. We propose a solution to the double-spending problem using a peer-to-peer network. The network timestamps transactions by hashing them into an ongoing chain of hash-based proof-of-work, forming a record that cannot be changed without redoing the proof-of-work. The longest chain not only serves as proof of the sequence of events witnessed, but proof that it came from the largest pool of CPU power. As long as a majority of CPU power is controlled by nodes that are not cooperating to attack the network, they'll generate the longest chain and outpace attackers. The network itself requires minimal structure. Messages are broadcast on a best effort basis, and nodes can leave and rejoin the network at will, accepting the longest proof-of-work chain as proof of what happened while they were gone.},
@@ -78,13 +67,13 @@ year = {2017}
 
 @article{Saveen2016,
 abstract = {— The blockchain technology as a foundation for distributed ledgers offers an innovative platform for a new decentralized and transparent transaction mechanism in industries and businesses. The inherited characteristics of this technology enhance trust through transparency and traceability within any transaction of data, goods, and financial resources. Despite initial doubts about this technology, recently governments and large corporations have investigated to adopt and improve this technology in various domains of applications, from finance, social and legal industries to design, manufacturing and supply chain networks. In this article, the authors review the current status of this technology and some of its applications. The potential benefit of such technology in manufacturing supply chain is then discussed in this article and a vision for the future blockchain ready manufacturing supply chain is proposed. Manufacturing of cardboard boxes are used as an example to demonstrate how such technology can be used in a global supply chain network. Finally, the requirements and challenges to adopt this technology in the future manufacturing systems are discussed.},
-author = {Abeyratne, Saveen A., and Radmehr P. Monfared},
+author = {{Abeyratne, Saveen A.}, and Radmehr P. Monfared},
 doi = {10.15623/ijret.2016.0509001},
-file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Monfared-BCReady{\_}Sept{\_}16{\_}Lboro.pdf:pdf;:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/. - 2016 - Blockchain Ready Manufacturing Supply Chain Using Distributed Ledger.pdf:pdf},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Blockchain Ready Manufacturing Supply Chain Using Distributed Ledger.pdf:pdf;:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/. - 2016 - Blockchain Ready Manufacturing Supply Chain Using Distributed Ledger.pdf:pdf},
 issn = {23217308},
 journal = {International Journal of Research in Engineering and Technology},
 keywords = {blockchain,digital currency and,distributed ledger,manufacturing supply chain,traceability},
-mendeley-groups = {Articles},
+mendeley-groups = {Articles,Integration Models},
 number = {09},
 pages = {1--10},
 title = {{Blockchain Ready Manufacturing Supply Chain Using Distributed Ledger}},
@@ -92,6 +81,8 @@ url = {http://esatjournals.net/ijret/2016v05/i09/IJRET20160509001.pdf},
 volume = {05},
 year = {2016}
 }
+
+
 
 @article{Wilding1998,
 abstract = {Since the late 1950s it has been recognized that the systems used internally within supply chains can lead to oscillations in demand and inventory as orders pass through the system. The uncertainty generated by these oscillations can result in late deliveries, order cancellations and an increased reliance on inventory to buffer these effects. Despite the best efforts of organizations to stabilize the dynamics generated, industry still experiences a high degree of uncertainty from this source. The supply chain complexity triangle describes the interaction of deterministic chaos, parallel interactions and demand amplification. It provides a framework for understanding the generation of uncertainty within supply chains. The implications for supply chain strategy and manufacturing logistics are discussed.},
@@ -104,7 +95,7 @@ journal = {International Journal of Physical Distribution {\&} Logistics Managem
 number = {8},
 pages = {599--616},
 pmid = {7754995},
-title = {{The supply chain complexity triangle: Uncertainty generation in the supply chain}},
+title = {{The Supply Chain Complexity Triangle: Uncertainty Generation in the Supply Chain}},
 url = {http://www.emeraldinsight.com/doi/10.1108/09600039810247524},
 volume = {28},
 year = {1998}
@@ -131,7 +122,7 @@ keywords = {competitiveness,content indicators,data systems,industrial managemen
 number = {1},
 pages = {11 -- 17},
 pmid = {234918441},
-title = {{Defining supply chain management: a historical perspective and practical guidelines}},
+title = {{Defining Supply Chain Management: a Historical Perspective and Practical Guidelines}},
 volume = {99},
 year = {2014}
 }
@@ -141,7 +132,7 @@ author = {Habib, Mamun},
 year = {2011},
 month = {09},
 pages = {},
-title = {Supply Chain Management (SCM): Theory and Evolution},
+title = {{Supply Chain Management (SCM): Theory and Evolution}},
 isbn = {978-953-307-250-0}
 }
 
@@ -160,7 +151,7 @@ number = {4},
 pages = {332--348},
 pmid = {42012058},
 primaryClass = {http:},
-title = {{The evolution and future of logistics and supply chain management}},
+title = {{The Evolution and Future of Logistics and Supply Chain Management}},
 url = {http://www.emeraldinsight.com/doi/10.1108/09555340710760152},
 volume = {19},
 year = {2007}
@@ -172,14 +163,14 @@ author = {Punter, Alan},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/supply{\_}chain{\_}failures{\_}2013{\_}final{\_}web.pdf:pdf},
 journal = {Airmic Technical},
 pages = {1--52},
-title = {{Supply Chain Failures - A study of the nature, causes and complexity of supply chain disruptions}},
+title = {{Supply Chain Failures - A Study of the Nature, Causes and Complexity of Supply Chain Disruptions}},
 year = {2013}
 }
 
 @misc{Ganeshan1995,
 author = {Ganeshan, Ram and Harrison, Terry P},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/An Introduction to Supply Chain Management.pdf:pdf},
-title = {{An introduction to supply chain management.pdf}},
+title = {{An Introduction to Supply Chain Management}},
 year = {1995}
 }
 
@@ -205,19 +196,18 @@ doi = {10.5663/aps.v1i1.10138},
 file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Ethereum{\_}white{\_}paper-a{\_}next{\_}generation{\_}smart{\_}contract{\_}and{\_}decentralized{\_}application{\_}platform-vitalik-buterin.pdf:pdf},
 isbn = {9780101808422},
 issn = {19233299},
-journal = {Etherum},
+journal = {Ethereum White Paper},
 number = {January},
 pages = {1--36},
 pmid = {21382811},
-title = {{A next-generation smart contract and decentralized application platform}},
+title = {{A Next-Generation Smart Contract and Decentralized Application Platform}},
 url = {http://buyxpr.com/build/pdfs/EthereumWhitePaper.pdf},
 year = {2014}
 }
 
 @article{byzantine-generals-problem,
 author = {Lamport, Leslie and Shostak, Robert and Pease, Marshall},
-title = {The Byzantine Generals Problem},
-booktitle = {},
+title = {{The Byzantine Generals Problem}},
 year = {1982},
 month = {July},
 abstract = {I have long felt that, because it was posed as a cute problem about philosophers seated around a table, Dijkstra's dining philosopher's problem received much more attention than it deserves. (For example, it has probably received more attention in the theory community than the readers/writers problem, which illustrates the same principles and has much more practical importance.) I believed that the problem introduced in [41] was very important and deserved the attention of computer scientists. The popularity of the dining philosophers problem taught me that the best way to attract attention to a problem is to present it in terms of a story.
@@ -235,28 +225,28 @@ chapter = {},
 isbn = {},
 }
 
-@Article{Haber1991,
-author="Haber, Stuart
-and Stornetta, W. Scott",
-title="How to time-stamp a digital document",
-journal="Journal of Cryptology",
-year="1991",
-month="Jan",
-day="01",
-volume="3",
-number="2",
-pages="99--111",
-abstract="The prospect of a world in which all text, audio, picture, and video documents are in digital form on easily modifiable media raises the issue of how to certify when a document was created or last changed. The problem is to time-stamp the data, not the medium. We propose computationally practical procedures for digital time-stamping of such documents so that it is infeasible for a user either to back-date or to forward-date his document, even with the collusion of a time-stamping service. Our procedures maintain complete privacy of the documents themselves, and require no record-keeping by the time-stamping service.",
-issn="1432-1378",
-doi="10.1007/BF00196791",
-url="https://doi.org/10.1007/BF00196791"
+@article{Haber1991,
+abstract = {The prospect of a world in which all text, audio, picture, and video documents are in digital form on easily modifiable media raises the issue of how to certify when a document was created or last changed. The problem is to time-stamp the data, not the medium. We propose computationally practical procedures for digital time-stamping of such documents so that it is infeasible for a user either to back-date or to forward-date his document, even with the collusion of a time-stamping service. Our procedures maintain complete privacy of the documents themselves, and require no record-keeping by the time-stamping service.},
+author = {Haber, Stuart and Stornetta, W Scott},
+doi = {10.1007/BF00196791},
+issn = {1432-1378},
+journal = {Journal of Cryptology},
+month = {jan},
+number = {2},
+pages = {99--111},
+title = {{How to time-stamp a digital document}},
+url = {https://doi.org/10.1007/BF00196791},
+volume = {3},
+year = {1991}
 }
+
 
 @article{szabo1996smart,
 author = {Szabo, Nick},
-journal = {URL: http://www.fon.hum.uva.nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo.best.vwh.net/smart{\_}contracts{\_}2.html},
+journal = {URL: http://www.fon.hum.uva.nl/rob/Courses/InformationInSpeech/CDROM/Literature/
+LOTwinterschool2006/szabo.best.vwh.net/smart{\_}contracts{\_}2.html},
 mendeley-groups = {Ethereum},
-title = {{Smart contracts: building blocks for digital markets}},
+title = {{Smart Contracts: Building Blocks for Digital Markets}},
 year = {1996}
 }
 
@@ -274,13 +264,13 @@ url = {http://arxiv.org/abs/1710.09437},
 year = {2017}
 }
 
-@article{Buterin2013,
+@misc{Buterin2013,
 author = {Buterin, Vitalik},
 howpublished = {URL: https://bitcoinmagazine.com/articles/what-proof-of-stake-is-and-why-it-matters-1377531463/},
 mendeley-groups = {Ethereum},
 title = {{What Proof of Stake Is And Why It Matters}},
-month = "August"
-year = {2013}
+month = {08},
+year = {2013},
 }
 
 @article{Pongnumkul2017,
@@ -292,7 +282,7 @@ isbn = {9781509029914},
 journal = {2017 26th International Conference on Computer Communications and Networks, ICCCN 2017},
 keywords = {Performance Analysis of Private Blockchain Platforms in Varying Workloads},
 mendeley-groups = {Ethereum},
-title = {{Performance analysis of private blockchain platforms in varying workloads}},
+title = {{Performance Analysis of Private Blockchain Platforms in Varying Workloads}},
 year = {2017}
 }
 
@@ -310,8 +300,204 @@ year = {2017}
 author = {Buterin, Vitalik},
 file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/c72af1228444c3de7396d6bc1c3532c427346b1c.html:html},
 mendeley-groups = {Ethereum},
-title = {{On sharding blockchains}},
+title = {{On Sharding Blockchains}},
 url = {https://github.com/ethereum/wiki/wiki/Sharding-FAQ},
 urldate = {February, 2018}
 }
 
+@article{Poon2017,
+abstract = {Plasma is a proposed framework for incentivized and enforced execution of smart contracts which is scalable to a signi cant amount of state updates per second (poten- tially billions) enabling the blockchain to be able to represent a signi cant amount of decentralized nancial applications worldwide. These smart contracts are incentivized to continue operation autonomously via network transaction fees, which is ultimately reliant upon the underlying blockchain (e.g. Ethereum) to enforce transactional state transitions.},
+author = {Poon, Joseph and Buterin, Vitalik},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/plasma.pdf:pdf},
+keywords = {scalable autonomous smart contracts,sma},
+mendeley-groups = {Ethereum},
+pages = {1--47},
+title = {{Plasma: Scalable Autonomous Smart Contracts Scalable Multi-Party Computation}},
+url = {https://plasma.io/plasma.pdf},
+year = {2017}
+}
+
+@misc{Hees,
+author = {Hees, Heiko},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/cebc8b6fc7d183b7618b384ed194a63d3852ff52.html:html},
+mendeley-groups = {Ethereum},
+title = {{What is the Raiden Network?}},
+url = {https://raiden.network/101.html},
+urldate = {2018-02-07}
+}
+
+@misc{Vukolic2017,
+author = {Vukoli{\'{c}}, Marko},
+booktitle = {Swiss Blockchain Summer School},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/613ed7f867a59ec649b35e458340681645bde181.pdf:pdf},
+mendeley-groups = {Hyperledger},
+title = {{Hyperledger Fabric - an Open-Source Distributed Operating System for Permissioned Blockchains}},
+url = {https://blockchain-summer.epfl.ch/talks/hyperledger-fabric-vukolic.pdf},
+year = {2017}
+}
+
+@article{Cachin2016,
+abstract = {Overview. A blockchain is best understood in the model of state-machine replication [8], where a service maintains some state and clients invoke operations that transform the state and generate outputs. A blockchain emulates a " trusted " computing service through a distributed protocol, run by nodes con-nected over the Internet. The service represents or creates an asset, in which all nodes have some stake. The nodes share the common goal of running the service but do not necessarily trust each other for more. In a " permissionless " blockchain such as the one underlying the Bitcoin cryptocurrency, anyone can operate a node and participate through spending CPU cycles and demonstrating a " proof-of-work. " On the other hand, blockchains in the " permissioned " model control who participates in validation and in the protocol; these nodes typically have established identities and form a consortium. A report of Swanson compares the two models [9]. Hyperledger. The Hyperledger Project (www.hyperledger.org) is a collaborative effort to cre-ate an enterprise-grade, open-source distributed ledger framework and code base. It aims to advance blockchain technology by identifying and realizing a cross-industry open standard platform for dis-tributed ledgers, which can transform the way business transactions are conducted globally. Established as a project of the Linux Foundation in early 2016, the Hyperledger Project currently has more than 50 members. Hyperledger Fabric. Hyperledger Fabric (github.com/hyperledger/fabric) is an imple-mentation of a distributed ledger platform for running smart contracts, leveraging familiar and proven technologies, with a modular architecture allowing pluggable implementations of various functions. It is one of multiple projects currently in incubation under the Hyperledger Project. A developer-preview of the Hyperledger Fabric (called " v0.5-developer-preview ") has been released in June 2016 (github.com/hyperledger/fabric/wiki/Fabric-Releases). The distributed ledger protocol of the fabric is run by peers. The fabric distinguishes between two kinds of peers: A validating peer is a node on the network responsible for running consensus,},
+author = {Cachin, Christian},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/f852c5f3fe649f8a17ded391df0796677a59927f.pdf:pdf},
+journal = {IBM Research},
+mendeley-groups = {Hyperledger},
+title = {{Architecture of the Hyperledger Blockchain Fabric}},
+url = {https://pdfs.semanticscholar.org/f852/c5f3fe649f8a17ded391df0796677a59927f.pdf},
+volume = {July},
+year = {2016}
+}
+
+@article{Androulaki2017,
+author = {Androulaki, Elli and Cachin, Christian and Caro, Angelo De and Kind, Andreas and Osborne, Mike and Schubert, Simon and Sorniotti, Alessandro and Vukolic, Marko and More, And},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/6c6a15fb9c74e640451011bc785c938488095df0.pdf:pdf},
+journal = {Real-World Cryptography Conference 2017},
+mendeley-groups = {Hyperledger},
+title = {{Cryptography and Protocols in Hyperledger Fabric}},
+url = {https://www.zurich.ibm.com/{~}cca/talks/20170106-blockchain-rwc.pdf},
+year = {2017}
+}
+
+@article{Sukhwani2017,
+author = {Sukhwani, Harish and Mart{\'{i}}nez, Jos{\'{e}} M. and Chang, Xiaolin and Trivedi, Kishor S. and Rindos, Andy},
+doi = {10.1109/SRDS.2017.36},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Performance Modeling of PBFT Consensus Process for Permissioned Blockchain Network (Hyperledger Fabric).pdf:pdf},
+isbn = {9781538616796},
+issn = {10609857},
+journal = {Proceedings of the IEEE Symposium on Reliable Distributed Systems},
+keywords = {Blockchain,Hyperledger fabric,PBFT,Performance modeling,Stochastic reward nets},
+mendeley-groups = {Hyperledger},
+pages = {253--255},
+title = {{Performance Modeling of PBFT Consensus Process for Permissioned Blockchain Network (Hyperledger Fabric)}},
+volume = {2017-September},
+year = {2017}
+}
+
+@misc{FabricDocArch,
+author = {{IBM Research}},
+pmid = {15014603},
+title = {{Architecture Explained}},
+url = {http://hyperledger-fabric.readthedocs.io/en/release/arch-deep-dive.html},
+urldate = {2018-02-07}
+}
+
+@article{IBMResearch2017,
+abstract = {he Hyperledger project is an open source collaborative effort created to advance cross-industry blockchain technologies. It is a global collaboration including leaders in finance, banking, IoT, supply chain, manufacturing and technology.},
+author = {{IBM Research}},
+doi = {10.5281/zenodo.1009257},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/HyperLedger{\_}Fabric{\_}DeepDive-20170424.pdf:pdf},
+mendeley-groups = {Hyperledger},
+pages = {257},
+title = {{Hyperledger Fabric Documentation}},
+url = {https://media.readthedocs.org/pdf/hyperledger-fabric/latest/hyperledger-fabric.pdf},
+year = {2017}
+}
+
+@article{Valenta2017,
+abstract = {With this paper, we provide a brief analysis of the most notable differences between the distributed ledger technologies (DLT) Hyperledger Fabric, R3 Corda and Ethereum. Our intention is to give decision makers new to DLT guidance for what use cases Hyperledger Fabric, Corda and Ethereum are most suitable. Three different frameworks From the white papers of Hyperledger Fabric, R3 Corda (in the following only referred to as Fabric and Corda, respectively) and Ethereum it becomes obvious that these frameworks have very different visions in mind with respect to possible fields of application. Development of both Fabric 1 and Corda 2 is driven by concrete use cases, whereas Corda's use cases are drawn from the financial services industry. Consequently, this is where Corda sees its main field of application. In contrast, Fabric intends to provide a modu-lar and extendable architecture that can be employed in various industries, from banking and healthcare over to supply chains. Ethereum also presents itself as utterly independent of any specific field of application. 3 However, in contrast to Fabric, it is not modularity that stands out but the provision of a generic platform for all kinds of transactions and applications. Table 1 pro-vides a summary of the three frameworks.},
+author = {Valenta, Martin and Sandner, Philipp},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/00c75699db7c5f2196ab0ae92be0430be4b291b4.pdf:pdf},
+mendeley-groups = {Framework Comparison},
+number = {June},
+pages = {1--8},
+title = {{Comparison of Ethereum, Hyperledger Fabric and Corda}},
+url = {www.twitter.com/fsblockchain{\%}0Awww.facebook.de/fsblockchain},
+year = {2017}
+}
+
+@article{Brown2016,
+author = {Brown, Richard Gendal and Carlyle, James and Grigg, Ian and Hearn, Mike},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/corda-introductory-whitepaper.pdf:pdf},
+mendeley-groups = {Corda},
+pages = {1--15},
+title = {{Corda: An Introduction}},
+year = {2016}
+}
+
+@article{Panayides2009,
+abstract = {Trust is identified as a significant predictor of positive performance in business relationships. On the premise that the effects of trust have not been given the deserved scholarly attention in the supply chain context, this paper investigates the effects of trust on innovativeness and supply chain performance. The hypothesised model is operationalised with survey data and analysed using structural equation modelling. The findings add credence to the positive effects of trust and identify trust and innovativeness as antecedents to higher performance in the supply chain. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
+author = {Panayides, Photis M. and {Venus Lun}, Y. H.},
+doi = {10.1016/j.ijpe.2008.12.025},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Panayides, Venus Lun - 2009 - The impact of trust on innovativeness and supply chain performance.pdf:pdf},
+isbn = {0925-5273},
+issn = {09255273},
+journal = {International Journal of Production Economics},
+keywords = {Innovation,Supply chain performance,Trust},
+mendeley-groups = {Integration Models},
+number = {1},
+pages = {35--46},
+pmid = {30},
+publisher = {Elsevier},
+title = {{The Impact of Trust on Innovativeness and Supply Chain Performance}},
+url = {http://dx.doi.org/10.1016/j.ijpe.2008.12.025},
+volume = {122},
+year = {2009}
+}
+
+@article{Yeung2009,
+abstract = {Supply chain integration nowadays is considered an important approach to building and sustaining competitive advantages. Many previous empirical researches have investigated trust and power between suppliers and customers, yet, the effects of trust and coercive power on supply chain integration are still largely unknown. This study investigates trust, coercive power and their interaction and their impact on internal and supplier integration, based on data collected in Chinese supply chains. The results reveal that both trust and coercive power improve internal and supplier integration, but when trust is low, coercive power reduces internal integration. Contradictory to conventional wisdom that coercive power hinders cooperation, this study found that coercive power improves supplier integration in Chinese supply chains, with or without the presence of trust. This study provides significant insights for Chinese inter-organizational trust-power relationship management and supply chain integration practices. {\textcopyright} 2008.},
+author = {Yeung, Jeff Hoi Yan and Selen, Willem and Zhang, Min and Huo, Baofeng},
+doi = {10.1016/j.ijpe.2008.07.014},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/The effects of trust and coercive power on supplier integration.pdf:pdf},
+isbn = {0925-5273},
+issn = {09255273},
+journal = {International Journal of Production Economics},
+keywords = {China,Coercive power,Supplier integration,Trust},
+mendeley-groups = {Integration Models},
+number = {1},
+pages = {66--78},
+pmid = {43032772},
+publisher = {Elsevier},
+title = {{The Effects of Trust and Coercive Power on Supplier Integration}},
+url = {http://dx.doi.org/10.1016/j.ijpe.2008.07.014},
+volume = {120},
+year = {2009}
+}
+
+@misc{Robinson2016,
+author = {Robinson, Adam},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/8cff0f772d2f27c21f032061d654689a5ace64d3.html:html},
+mendeley-groups = {Integration Models},
+title = {{What Is Blockchain Technology, and What Is Its Potential Impact on the Supply Chain?}},
+url = {http://cerasis.com/2016/06/29/blockchain-technology/},
+urldate = {2018-02-08},
+year = {2016}
+}
+
+@misc{Huertas2017,
+abstract = {Eximchain brings visibility to global supply chain finance (SCF) through smart contracts. We build a public, permis-sioned chain for small-and-medium enterprise (SME) buyers and suppliers to create supply chain optimization tools and gain access to affordable capital sources to grow their busi-nesses. Our smart contract-based ecosystem allows SMEs to quickly implement customized SCF solutions or issue digi-tal tokens on a permissioned fork of Ethereum supporting data privacy. We adopt a consensus protocol and quadratic voting based governance model to provide practical, finite time security guarantees on our public, permissioned block-chain hybrid. From financing to procure-to-pay, our products utilize smart contracts to optimize the global supply chain for buyers, suppliers, and financiers. Eximchain is an official candidate of the Blockchain Regulatory Sandbox Program in Guiyang, China and a member of EEA (Enterprise Ethe-reum Alliance).},
+author = {Huertas, Juan and Liu, Hope and Robinson, Sarah},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Similar Projects/Whitepaper - Eximchain.pdf:pdf},
+mendeley-groups = {Similar Applications},
+title = {{Eximchain: Supply Chain Finance Solutions on a Secured Public, Permissioned Blockchain Hybrid}},
+url = {https://www.eximchain.com/EXIMCHAIN-Whitepaper.pdf},
+year = {2017}
+}
+
+@misc{Rakic2017,
+abstract = {Blockchain technology has huge potential to decentralize trust in supply chains and bring measurable benefits and value to the public and private sectors. To unlock this potential, the OriginTrail protocol was designed purposefully to tackle the main challenges which limit the fluent exchange of, and integrity of data in product supply chains. With supply chain data becoming increasingly fragmented, scalability and cost concerns of current decentralized solutions become evident. OriginTrail is a unique solution allowing IT providers in supply chains to set up blockchain supported data sharing in multi-organizational environment. It helps them build transparency beyond the " one step down, one step up " traceability principle. Furthermore, it improves the integrity of product data and drives efficiencies for stakeholders. The first version of the OriginTrail solution is proven and currently deployed in the food industry. The upcoming open source version will be suitable to any product supply chain such as automotive, consumer goods, pharmaceutical etc.},
+author = {Rakic, Branimir and Levak, Tomaz and Drev, Ziga and Savic, Sava and Veljkovic, Aleksandar},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Similar Projects/OriginTrail-White-Paper.pdf:pdf},
+mendeley-groups = {Similar Applications},
+title = {{OriginTrail: First Purpose Built Protocol for Supply Chains Based on Blockchain}},
+year = {2017}
+}
+
+@misc{CargoX2017,
+author = {CargoX},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Similar Projects/CargoX-Whitepaper.pdf:pdf},
+mendeley-groups = {Similar Applications},
+title = {{Reshaping the Future of Global Trade with World's First Blockchain Bill of Lading}},
+url = {https://cargox.io/CargoX-Whitepaper.pdf},
+year = {2017}
+}
+
+@misc{A.P.MOLLER-MAERSK,
+author = {{A.P. MOLLER - MAERSK}},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/d50019308ca897d1761097051bd239f7c48352b6.html:html},
+mendeley-groups = {Similar Applications},
+title = {{Maersk and IBM Launch Digital Joint Venture}},
+url = {https://www.maersk.com/stories/maersk-and-ibm-launch-digital-joint-venture},
+urldate = {2018-02-08},
+year = {2018}
+}
