--- a/supplychainproblems.tex
+++ b/supplychainproblems.tex
@@ -1,8 +1,7 @@
 \chapter{Supply Chain}
 \label{chap:supply-chain-problems}
-% RESEARCH PROBLEMS
 
-%\minitoc \mtcskip \noindent
+\minitoc \mtcskip \noindent
 
 This chapter will be explaining the concepts of supply chain and the challenges that the area of SCM is currently facing.
 
